--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,1 +1,9 @@
-all:
+PRODUCTS = process.dot.svg
+
+all: $(PRODUCTS)
+
+process.dot.svg: process.dot
+	dot -O -Tsvg $<
+
+clean:
+	rm -f $(PRODUCTS)
