--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,9 @@ remote_name: deploy
 pages:
   - Home: index.md
   - Installation: installation.md
-  - Programming: programming.md
+  - Programming:
+    - Tutorial: programming.md
+    - "Macro Reference": macros.md
 
 markdown_extensions:
   - smarty
